--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           go-version: '^1.16'
 
-      - name: Install dependencies
-        run: go install github.com/russross/blackfriday/v2
+      - name: Install dependencies      
+        run: go mod init blackfriday; go install github.com/russross/blackfriday/v2
 
       - name: Convert Markdown to HTML
         run: go run ./src/convert_md_2_html.go
