--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -25,3 +25,6 @@ jobs:
       - name: Convert Markdown to HTML
         run: go run ./src/convert_md_2_html.go
 
+      - name: Display some HTML Content
+        run: cat computing/argocd/informacoes/index.html
+
