--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -40,6 +40,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./wwwroot # Directory where HTML files are stored
+          publish_dir: ./www-temp # Directory where HTML files are stored
           publish_branch: gh-pages # Target branch to deploy your site
           keep_files: true # Set to false if you want to overwrite the existing content
