--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -44,6 +44,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.WEBSITE_PAT }}
-          publish_dir: ./www-temp # Directory where HTML files are stored
+          publish_dir: ./website/www-temp # Directory where HTML files are stored
           publish_branch: gh-pages # Target branch to deploy your site
           keep_files: true # Set to false if you want to overwrite the existing content
