--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -52,6 +52,7 @@ jobs:
       # Adding HTML CSS Headers
       - name: Adding HTML CSS Headers
         run: |
+           cp ./src/css/* www-temp/
            cd www-temp
            ls -1| while read i; do cp header.html tmp.html; cat $i >> tmp.html; mv tmp.html $i; rm -f tmp.html; done
 
