--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -53,5 +53,6 @@ jobs:
            cp ./src/css/* www-temp/
            cd www-temp
            ls -1| while read i; do cp header.html tmp.html; cat $i >> tmp.html; mv tmp.html $i; rm -f tmp.html; done
+           ls -1 | while read 1; echo "-----------------"; do cat $1; done
 
       
