--- a/.github/workflows/mdToHTML.yml
+++ b/.github/workflows/mdToHTML.yml
@@ -40,7 +40,9 @@ jobs:
            cp  $GITHUB_WORKSPACE/src/css/*.html css
            cp  $GITHUB_WORKSPACE/src/css/*.css .
            ls -1 | while read i; do cp css/header.html tmp.html; cat $i >> tmp.html; mv tmp.html $i; rm -f tmp.html; done
-           ls -1 | while read i; do echo "-----------------"; cat $i; done
+           #ls -1 | while read i; do echo "-----------------"; cat $i; done
+           pwd
+           ls -ltrh
         working-directory: ${{ github.workspace }}
            
       # Setting up Git user to commit to the gh-pages branch
